--- a/src/components/style/header.css
+++ b/src/components/style/header.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 1%;
-    position: absolute;
+    position: relative;
     width: 90%;
     top: 0;
     z-index: 3;
