--- a/src/components/style/home.css
+++ b/src/components/style/home.css
@@ -352,23 +352,28 @@ border-radius: 20px;
 }
 .home-projects-each{
     background: rgb(43,31,87);
-    padding: 10px 30px 10px 30px;
+  
     margin-bottom: 30px;
-    border-radius: 20px;
-    width: 30%;
+    border-radius: 20px; width: 30%;
     max-width: 300px;
     min-width: 100px;
 
+
+}
+.home-projects-each h3{
+    color:#8067ee
 }
 
 .home-projects-each-image img{
-width: 100%;
+    border-radius: 20px 20px 0 0;
+    width: 100%;
+    height: 200px;
 }
 
 .home-projects-eachdisc{
     margin-top: 15px;
     margin-bottom: 15px;
-    height: 200px;
+    height: 100px;
     overflow-y: auto;
     overflow-x: hidden;
 }
