--- a/src/components/style/home.css
+++ b/src/components/style/home.css
@@ -180,6 +180,10 @@
 @media(max-width:800px){
     .Home-lists{
         top: 60px;
+
+    }
+    .Home-desc-right{
+        margin-bottom: 50px;
     }
 }
 
@@ -202,12 +206,11 @@
 
 .Home-desc-right img{
     object-fit: cover;
-    width: 20em;
-    max-width: 100%;
-    height: 20em;
+    width: 5em;
+    height: 5em;
      border-radius: 50%;
-     margin-top: -20px;
-     margin-bottom: 0px;
+     margin-top: 0px;
+     margin-bottom: 250px;
      padding: 0;
 
 }
