--- a/src/components/style/home.css
+++ b/src/components/style/home.css
@@ -206,12 +206,12 @@
 
 .Home-desc-right img{
     object-fit: cover;
-    width: 5em;
-    height: 5em;
-     border-radius: 50%;
-     margin-top: 0px;
-     margin-bottom: 250px;
-     padding: 0;
+    width: 6em;
+    height: 6em;
+    border-radius: 50%;
+    margin-top: 0px;
+    margin-bottom: 250px;
+    padding: 0;
 
 }
 .Home-desc-left{
@@ -232,17 +232,30 @@
     opacity: 0.8;
 }
 .Home-about{
-margin: -120px 10% 150px 10%;
-
+    margin: -120px 10% 150px 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
 }
+
 .Home-about h1{
-    text-align: center;
+  transform: translateY(100px);
+  font-size: 60px;
+  height: 0;
+  width: 0;
+}
+
+.Home-about-image img{
+    object-fit: cover;
+    border-radius: 50%;
+    width: 400px;
+    height: 400px;
 }
 .Home-about-disc{
     line-height: 1.5;
-    background: rgb(43,31,87);
-padding: 10px 20px 10px 20px;
-border-radius: 20px;
+    border-radius: 20px;
+    font-size: 13px;
 }
 .Home-about-disc-pics{
     display: flex;
@@ -354,23 +367,40 @@ border-radius: 20px;
     flex-wrap: wrap;
 }
 .home-projects-each{
-    background: rgb(43,31,87);
-  
     margin-bottom: 30px;
-    border-radius: 20px; width: 30%;
-    max-width: 300px;
-    min-width: 100px;
+    border-radius: 20px; 
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
 
-
+}
+@media(max-width:900px){
+    .home-projects-each{
+        flex-direction: column;
+    }
 }
 .home-projects-each h3{
     color:#8067ee
 }
 
+.home-projects-each-image{
+    width: 450px;
+    height:350px;
+}
 .home-projects-each-image img{
-    border-radius: 20px 20px 0 0;
+    border-radius: 20px;
     width: 100%;
-    height: 200px;
+    height:350px;
+    object-fit:contain
+}
+@media(max-width:550px){
+    .home-projects-each-image{
+        width: 90%;
+        height:350px;
+        background-color: #6e67ce;
+    }
 }
 
 .home-projects-eachdisc{
@@ -408,6 +438,28 @@ border-radius: 20px;
   .home-projects-eachdisc::-webkit-scrollbar-thumb:hover {
     background: rgb(64, 47, 124);;
   }
+
+.home-jobs {
+    margin-top: 130px;
+    margin-bottom: 100px;
+}
+
+.home-jobs h1{
+    text-align: center;
+}
+.home-jobs-contents{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.home-jobs-each{
+    border-left: 3px solid rgb(255, 62, 110);
+     margin-bottom: 10px;
+     padding-left: 10px;
+
+}
+
 
   .home-contact{
     margin-top: 150px;
@@ -502,28 +554,16 @@ border-radius: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     gap: 20px;
      height: 60px;
      margin-bottom:150px;
      padding-bottom: 90px;
 }
+.home-contact-links a{
+    color: rgb(216, 146, 238);
+}
 
-.home-contact-links-email{ 
- color: #701616;
-}
-.home-contact-links-github{
-    color: black;
-}
-.home-contact-links-linked{
-    color: rgb(56, 56, 148);
-}
-.home-contact-links-telegram{
-    color: rgb(70, 70, 177);
-
-}
-.home-contact-links-insta{
-    color: #701616;
-}
 @media(max-width:800px){
     .home-contact-section{
         flex-direction: column-reverse;
@@ -535,9 +575,6 @@ border-radius: 20px;
     .home-contact-Image {
         width: 90%;
     }
-        .home-projects-each{
-            width:60%;
-        }
     .Home-Experience-disc-each{
         flex-direction: column;
         width: 50%;
@@ -572,4 +609,18 @@ border-radius: 20px;
         max-width: 100%;
     }  
   }
- 
+  @media(max-width:700px){
+    .Home-about-image img{
+        width: 300px;
+        height: 300px;
+    }
+    .Home-about h1{
+        transform: translateY(100px);
+        font-size: 40px;
+      }
+}
+@media(max-width:900px){
+    .Home-about{
+        flex-direction: column;
+    }
+}
